--- a/tox.ini
+++ b/tox.ini
@@ -63,7 +63,7 @@ exclude =
     .cache,
     .eggs,
     get-pip.py
-ignore = D203, D100, D103, D202, D200
+ignore = D203, D100, D103, D202, D200, W504
 import-order-style = google
 max-line-length = 120
 statistics = True
