--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python:
   - "3.5"
   - "3.6"
-  - "3.7"
+  - "3.7-dev"
 # commands to install dependencies
 install:
   - pip install -r requirements.txt
@@ -11,3 +11,4 @@ install:
 # command to run tests
 script:
   - tox
+  - tox -e lint
