--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
-sudo: false
+sudo: yes
 language: python
 python:
   - "3.5"
   - "3.6"
-  - "3.7-dev"
+  - "3.7"
 # commands to install dependencies
 install:
-  - pip install -r requirements.txt
   - pip install -q pytest flake8 pip>=10 tox-travis
+  - pip install -r requirements.txt
 # command to run tests
 script:
   - tox
