--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
-sudo: yes
+sudo: required
 language: python
 python:
   - "3.5"
   - "3.6"
-  - "3.7"
+# Enable 3.7 without globally enabling sudo and dist: xenial for other build jobs
+matrix:
+  include:
+    - python: 3.7
+      dist: bionic
+      sudo: true
 # commands to install dependencies
 install:
   - pip install -q pytest flake8 pip>=10 tox-travis
