--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 matrix:
   include:
     - python: 3.7
-      dist: bionic
+      dist: xenial
       sudo: true
 # commands to install dependencies
 install:
