--- a/examples/settings.yaml
+++ b/examples/settings.yaml
@@ -6,6 +6,10 @@ origin_keys:
   ceph-radosgw: source
 
 # Main OpenStack services to be upgraded
+# Services are upgraded in the order specified
+# The order of services is based on:
+# https://github.com/openstack-charmers/openstack-charms-tools/blob/master/os-upgrade.py
+# https://docs.openstack.org/charm-guide/latest/1708.html
 services:
   # Ceph
   - 'ceph-mon'
