snapcraft requirements should be a string
snapcraft, version 2.43.1 (ubuntu/xenial) requires requirements variable to be a string

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -12,8 +12,7 @@ parts:
   jujuna:
     plugin: python
     python-version: python3
-    requirements:
-      - ./requirements.txt
+    requirements: ./requirements.txt
     source: .
 apps:
   jujuna:
