--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,7 @@ python:
   - "3.5"
   - "3.6"
   - "3.7"
-# Enable 3.7 without globally enabling sudo and dist: xenial for other build jobs
-# matrix:
-#   include:
-#     - python: 3.7
-#       dist: xenial
-#       sudo: true
-# commands to install dependencies
+  - "3.8-dev"
 install:
   - pip install -q pytest flake8 pip>=10 tox-travis
   - pip install -r requirements.txt
