--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ matrix:
     dist: xenial
   - python: "3.6"
     dist: xenial
-    env: TRAVIS_TAG=deploy
   - python: "3.7"
     dist: bionic
 install:
@@ -30,4 +29,4 @@ deploy:
   skip_cleanup: true
   on:
     branch: master
-    tags: true
+    python: "3.6"
