keep python 3.5.2 compatibility for xenial

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pip>=19
 pyyaml<=6.0,>=5.1.2
-async-timeout==3.0.1
+async-timeout<=3.99,>=2.0.1
 tox>=3.14.1
 juju<=2.6.99,>=2.6.3
 argcomplete==1.10.0
