--- a/.github/workflows/snapcraft.yml
+++ b/.github/workflows/snapcraft.yml
@@ -15,6 +15,9 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install snapcraft
       uses: samuelmeuli/action-snapcraft@v1.0.0
+      with:
+        # Log in to Snap Store
+        snapcraft_token: ${{ secrets.snapcraft_token }}
     - name: Snap build
       run: snapcraft
 #     - name: Snap release
