--- a/examples/Vagrantfile
+++ b/examples/Vagrantfile
@@ -1,8 +1,8 @@
 Vagrant.configure(2) do |config|
   # Development box
-  config.vm.define "jujudev" do |dev|
+  config.vm.define "jujunadev" do |dev|
     # Select the box
-    dev.vm.box = "bento/ubuntu-16.04"
+    dev.vm.box = "bento/ubuntu-18.04"
     # Run playbook
     dev.vm.provision "ansible_local" do |ansible|
       ansible.playbook = "vagrant.yaml"
