--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -24,4 +24,4 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
         python setup.py sdist bdist_wheel
-        if [[ $(git rev-parse --abbrev-ref HEAD) = "master" ]]; then twine upload dist/*; fi
+        [[ $(git rev-parse --abbrev-ref HEAD) = "master" ]] && twine upload dist/*
