--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -1,9 +1,9 @@
 name: Upload Python Package
 
 on:
-  create:
-    tags:
-    - refs/tags/*
+  push:
+    branches:
+      - master
 
 jobs:
   deploy:
@@ -18,10 +18,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
-    - name: Build and publish
+    - name: Build
+      run: python setup.py sdist bdist_wheel
+    - name: Publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      run: |
-        python setup.py sdist bdist_wheel
-        [[ $(git rev-parse --abbrev-ref HEAD) = "master" ]] && twine upload dist/*
+      run: echo "check tags" && [[ "${GITHUB_REF}" =~ "refs/tags/"* ]] && twine upload dist/* || echo "not publishing"
+      shell: bash
