add version env variable to snapcraft build

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ script:
   - tox
   - tox -e lint
   - tox -e docs
-  - if [[ "$BUILD_SNAP" == true ]]; then export SNAPCRAFT_PROJECT_VERSION=$(cat VERSION); snapcraft; fi
+  - export SNAPCRAFT_PROJECT_VERSION=$(cat VERSION) && envsubst < snap/snapcraft.yaml.tpl > snap/snapcraft.yaml
+  - if [[ "$BUILD_SNAP" == true ]]; then snapcraft; fi
 deploy:
   provider: snap
   snap: jujuna_*_amd64.snap
