--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ name = jujuna
 [tox]
 minversion=3.3.0
 skipsdist = True
-envlist = py35, py36, py37, lint, docs
+envlist = py35, py36, py37, py38, lint, docs
 
 [testenv]
 deps =
@@ -57,7 +57,9 @@ exclude =
     build,
     dist,
     tests/fixtures/*,
-    .env/*,
+    .env,
+    env,
+    venv,
     *.pyc,
     *.egg-info,
     .cache,
