--- a/.github/workflows/snappublish.yml
+++ b/.github/workflows/snappublish.yml
@@ -34,13 +34,19 @@ jobs:
       run: |
         sg lxd -c 'snapcraft --use-lxd'
 
-      # https://circleci.com/docs/2.0/build-publish-snap-packages/
-    - name: Publish snap
-      env:
-        SNAPCRAFT_LOGIN_FILE: ${{ secrets.SNAPCRAFT_TOKEN }}
-      run: |
-        mkdir .snapcraft
-        echo $SNAPCRAFT_LOGIN_FILE | base64 --decode --ignore-garbage > .snapcraft/snapcraft.cfg
-        snapcraft push *.snap --release edge
-      # [[ "${GITHUB_REF}" =~ refs/tags/$(cat VERSION) ]] && snapcraft push *.snap --release edge || echo "not publishing"
-      shell: bash
+    - uses: actions/upload-artifact@v2
+      with:
+        name: jujuna
+        path: |
+          jujuna*.snap
+
+    # https://circleci.com/docs/2.0/build-publish-snap-packages/
+    # - name: Publish snap
+    #   env:
+    #     SNAPCRAFT_LOGIN_FILE: ${{ secrets.SNAPCRAFT_TOKEN }}
+    #   run: |
+    #     mkdir .snapcraft
+    #     echo $SNAPCRAFT_LOGIN_FILE | base64 --decode --ignore-garbage > .snapcraft/snapcraft.cfg
+    #     snapcraft push *.snap --release edge
+    #   # [[ "${GITHUB_REF}" =~ refs/tags/$(cat VERSION) ]] && snapcraft push *.snap --release edge || echo "not publishing"
+    #   shell: bash
