--- a/examples/vagrant.yaml
+++ b/examples/vagrant.yaml
@@ -4,8 +4,59 @@
   vars:
     user: vagrant
     group: vagrant
+    lxd_version: "4.0/stable"
+    juju_version: "2.8/stable"
 
   tasks:
+    - name: Install packages
+      apt:
+        name:
+          - apt-cacher-ng
+          - bash-completion
+          - bridge-utils
+          - python3
+          - python3-pip
+          - python3-apt
+          - overlayroot
+        state: latest
+
+    - name: "Install lxd {{ lxd_version }} snap"
+      command: "snap install lxd --channel={{ lxd_version }}"
+      args:
+        creates: /snap/bin/lxd
+
+    - name: "Install juju {{ juju_version }} snap"
+      command: "snap install juju --classic --channel={{ juju_version }}"
+      args:
+        creates: /snap/bin/juju
+
+    - name: Run juju to generate juju dir
+      command: /snap/bin/juju
+      become_user: "{{ user }}"
+      args:
+        creates: ~/.local/share/juju
+
+    - name: Add the overlay module
+      modprobe:
+        name: overlay
+        state: present
+
+    - name: Configure LXD (https://jaas.ai/docs/lxd-cloud#heading--configuring-lxd)
+      command: "{{ item }}"
+      with_items:
+        - lxd init --auto --storage-backend btrfs --storage-create-loop 30 --storage-pool lxd
+        - lxc network set lxdbr0 ipv6.address none
+      ignore_errors: yes
+
+    - name: Bootstrap juju controller
+      command: juju bootstrap localhost lxd
+      become: yes
+      become_user: vagrant
+      ignore_errors: yes
+      async: 7200
+      poll: 0
+      register: juju_bootstrap
+
     - name: Add `watch-juju` alias and snap path to .bashrc
       blockinfile:
         path: "/home/{{ user }}/.bashrc"
@@ -14,78 +65,6 @@
           alias watch-juju='watch --color -n1 juju status --color'
           # Add snaps to path
           export PATH=/snap/bin:$PATH
-
-    - name: Install and configure snaps - juju 2.4 (xenial)
-      block:
-
-        - name: Install packages (xenial)
-          apt:
-            name: ["zfsutils-linux", "apt-cacher-ng", "python3", "python3-pip", "lxd", "lxd-client"]
-            state: latest
-            default_release: xenial-backports
-
-        - name: Install juju 2.4/stable snap (xenial)
-          command: snap install juju --classic --channel=2.4/stable
-
-      when: ansible_distribution == 'Ubuntu' and ansible_distribution_release == 'xenial'
-
-    - name: Install and configure snaps - juju 2.7 (bionic)
-      block:
-
-        - name: Install packages
-          apt:
-            name: ["zfsutils-linux", "apt-cacher-ng", "python3", "python3-pip"]
-            state: latest
-
-        - name: Install lxd snap (https://jaas.ai/docs/lxd-cloud#heading--installing-lxd)
-          snap:
-            name: lxd
-            state: present
-          register: lxdsnap
-
-        - name: Sleep for 10 seconds for systemd to handle LXD service state
-          wait_for:
-            timeout: 30
-          when: lxdsnap.changed
-
-        - name: Assure service lxd is started
-          service:
-            name: lxd
-            state: started
-          when: lxdsnap.changed
-
-        - name: Assure service snap.lxd.daemon is started
-          service:
-            name: snap.lxd.daemon
-            state: started
-
-        - name: Migrate lxd from apt to snap
-          command: "/snap/bin/lxd.migrate -yes"
-          when: lxdsnap.changed
-
-        - name: Assure apt LXD purged
-          apt:
-            name: ["liblxc1", "lxcfs", "lxd", "lxd-client"]
-            state: absent
-            purge: true
-
-        - name: Install juju 2.7/stable snap
-          command: snap install juju --classic --channel=2.7/stable
-
-      when: ansible_distribution == 'Ubuntu' and ansible_distribution_release == 'bionic'
-
-    - name: Run juju to generate juju dir
-      command: /snap/bin/juju
-      become_user: "{{ user }}"
-      args:
-        creates: ~/.local/share/juju
-
-    - name: Setup lxd
-      command: "{{ item }}"
-      with_items:
-        - lxd init --auto --storage-backend zfs --storage-create-loop 30 --storage-pool lxd
-        - lxc network set lxdbr0 ipv6.address none
-      ignore_errors: yes
 
     - name: Configure apt-cacher-ng for https
       lineinfile:
@@ -114,18 +93,27 @@
                 enable-os-upgrade: false
 
     - name: Upgrade pip
+      become: no
       pip:
         name: pip
         executable: pip3
-        extra_args: --upgrade
+        extra_args: --upgrade --user
 
     - name: Install jujuna
+      become: no
       pip:
         name: jujuna
         executable: pip3
+        extra_args: --user
+      ignore_errors: yes
 
-    - name: Bootstrap juju controller
-      command: juju bootstrap localhost lxd
+    - name: Wait for Juju bootstrap to complete (async)
+      async_status:
+        jid: "{{ juju_bootstrap.ansible_job_id }}"
       become: yes
       become_user: vagrant
       ignore_errors: yes
+      register: job_result
+      until: job_result.finished
+      delay: 10
+      retries: 720
